--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -17,6 +17,8 @@
         <div class="input-field">
             <input type="text" id="post-title" placeholder="Enter Post Title">
             <input type="text" id="post-content" placeholder="Enter Post Content">
+            <input type="text" id="post-author" placeholder="Enter Author">
+            <input type="date" id="post-date" placeholder="Enter Date">
             <button onclick="addPost()">Add Post</button>
         </div>
         <div id="post-container">
